--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,4 +2,4 @@ Changes since 2.5.0:
 
 * OperationHandle and ServiceHandle extend Closable for try-with-resources
 * Renamed Module to HK2Module for JDK 9+ compatibility
-
+* Added support for java.util.Optional as alternative to @Optional
